# flipbook

./: .clang-format  .gitignore  CMakeLists.txt  ISSUES.md  README.md  avfps.cpp  avfps.h  avmetadata.cpp  avmetadata.h  avreader.h  avreader.mm  avsidecar.cpp  avsidecar.h  avsmptetime.cpp  avsmptetime.h  avstream.h  avstream.mm  avtime.cpp  avtime.h  avtimer.h  avtimer.mm  avtimerange.cpp  avtimerange.h  build.sh  flipbook.cpp  flipbook.h  flipbook.ui  flipman.cpp  flipman.h  flipman.ui  mac.h  mac.mm  main.cpp  platform.h  platform.mm  qt_reader.h  qt_reader.mm  qt_sidecar.cpp  qt_sidecar.h  qt_stream.h  (+13 more)
resources/: color.vert
